--- a/login.html
+++ b/login.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Simplifying Data</title>
     <style>
+        <script>
+  window.location.href = "register.html";
+</script>
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
@@ -60,3 +64,4 @@
     </script>
 </body>
 </html>
+
